# di

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  ChangeLog.txt  LICENSE  LICENSE.txt  MANIFEST  Makefile  README  README-5.txt  README-new.txt  README-old.txt  README.md  README.txt  VERSION.txt  config.h.in  di.1  di.c  di.h  di.pc.in  di.spec  diconfig.h.in  didiskutil.c  digetentries.c  digetinfo.c  diinternal.h  dilib.c  dilib.h  dimath.c  dimath.h  dimath_def.h  dimath_gmp.h  dimath_internal.h  dimath_mp.h  dimath_mpdec.h  dimath_tommath.h  dimathtest.c  dimntopt.h  dioptions.c  (+20 more)
.github/workflows/: cmake-multi-platform.yml  di-make-cmake.yml  di-make-mkc.yml  di-msys2-make-mkc.yml  di-msys2-pure-cmake.yml  di-pure-cmake.yml  msys2.yml
C/: CMakeLists.txt  Makefile  config.h.in  di.c  di.h  di.pc.in  didiskutil.c  digetentries.c  digetinfo.c  dimain.c  dimain.h  dimath.h  dimathtest.c  dimntopt.h  diquota.c  display.c  display.h  getoptn.c  getoptn.h  options.c  options.h  realloc.c  strdup.c  strstr.c  tcldiskspace.c  trimchar.c  version.h
C/Perl/: di.xs
C/configs/: config.mingw  config.ms.cl
C/mkc_config/: di-env-shared.mkc  di-env.mkc  di.mkc
C/tests.d/: buildpl.sh  compshpl.sh  getoptn.sh  rpmbuild.sh
configs/: config.cygwin.gcc  config.ms.cl
examples/: build.sh  diex.c
include/: di.h  dilib.h  dimath.h  dimntopt.h
man/: di.1  libdi.3
mkc_config/: di-env-shared.mkc  di-env.mkc  di.mkc  libdi-env.mkc  libdi.mkc
mkconfig/: ChangeLog  mkconfig.pl  mkconfig.sh
mkconfig/units/: c-main.sh  c-support.sh  d-main.sh  env-cc.sh  env-main.sh
po/: de.po  di.pot  es.po
src/: didiskutil.c  digetentries.c  digetinfo.c  dimathtest.c  display.c  getoptn.c  options.c  strutils.c
tcl-diskspace/: README.txt  pkgIndex.tcl  z.sh
tests/: README.txt  check.sh  checkvm.sh  chkblddiff.awk  chkdiff.awk  compare.sh  comparemath.sh  dibldrun.sh  hostinfo.sh  hostip.sh  hostlist.txt  lhost.sh  localtest.sh  setupvm.sh  startvm.sh  stopvm.sh  testall.sh  testvm.sh  thost.sh  timing.sh  util.sh
tests.d/: buildpl.sh  buildsh.sh  compshpl.sh  diarg.sh  diexec.sh  diinst.sh  dinls.sh  disort.sh  ditot.sh  env.sh  test_order
utils/: asan.env  chkcmake.sh  chklibnm.sh  comph.sh  depcheck.sh  extractpo.sh  instlibdi.sh  instman.sh  instpc.sh  instpo.sh  mktar.sh  updatecopyright.sh
web/: index.html  installhtml.sh  push.sh  pushbeta.sh  wikiput.sh
wiki/: ChangeLog.txt  Development.txt  FormatStrings.txt  GettingData.txt  History.txt  Home.txt  Initializing.txt  KnownIssues.txt  Options.txt  Testing.txt  Using.txt
